<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="choclate_topping">Choclate Topping</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="initial_quantity_value">1</string>
</resources>