<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:text="@string/whippedCream"
        android:textSize="16sp" />
    <CheckBox
        android:id="@+id/choclate_topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:text="@string/choclate_topping"
        android:textSize="16sp"/>

    <TextView
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"
        style="@style/HeaderTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:onClick="decreament"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/initial_quantity_value"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="increament"
            android:text="+" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:text="order summary"-->
<!--        android:textAllCaps="true" />-->

<!--    <TextView-->
<!--        android:id="@+id/order_summary_text_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:text="$0"-->
<!--        android:textColor="@color/black" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>
